--- a/IAM_TASK_3/assignment_files/environment.yml
+++ b/IAM_TASK_3/assignment_files/environment.yml
@@ -4,9 +4,9 @@ channels:
   - defaults
 dependencies:
   # - python=3.6.13
-  - cv2
+  - opencv
   - pandas
-  - re
+  - regex
   # - Pillow=8.4.0
   - Pillow
   - numpy
